# async-flask-demo

./: README.md  justfile  pyproject.toml
asyncdemo/asynciodemo/: main.py
asyncdemo/flaskdemo/: main.py  uwsgi.ini
