[tool.poetry]
name = "async-flask-demo"
version = "0.1.0"
description = "Just a demo to show how to make Flask work with evented I/O"
authors = ["Diogo Baeder <diogobaeder@yahoo.com.br>"]
license = "MIT"
readme = "README.md"
packages = [{include = "async_flask_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
uwsgi = "^2.0.21"
gevent = "^22.10.2"
fastapi = "^0.95.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
polars = "^0.17.11"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
mypy = "^1.2.0"
ruff = "^0.0.264"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
